# tinyprof

./: .gitignore  Cargo.toml  README.md
examples/: profiling.rs
src/: counters.rs  lib.rs  macros.rs  macros_dummy.rs  profiler.rs  profiler_frame.rs  profiler_state.rs  region.rs  reporter.rs  thread_storage.rs
src/frontends/: mod.rs  termion_frontend.rs
tinyprof-frontends/: Cargo.toml
tinyprof-frontends/src/: imgui_frontend.rs  lib.rs  mod.rs  termion_frontend.rs
