[package]
name = "tinyprof"
description = "Tiny realtime frame profiler, well used with tinyecs"
repository = "https://github.com/not-fl3/tinyprof.git"
keywords = ["profiler"]
authors = ["not.fl3@gmail.com"]
license = "MIT"
version = "0.1.0"


[dependencies]
failure = "0.1.0"
failure_derive = "0.1.0"
time = "0.1"
lazy_static = "0.2"
vec_map = "0.8.0"

termion = { version = "1.0", optional = true }
gag = { version = "0.1.9", optional = true }

[dev-dependencies]
rand = "0.3"

[features]
termion_frontend = [ "termion", "gag" ]
prof = []
default = ["termion_frontend"]
