[package]
name = "tinyprof_frontends"
version = "0.0.1"

[dependencies]
tinyprof = { path = "../" }
lazysort = "0.2.0"
termion = { version = "1.0", optional = true }
imgui = { version = "0.0.17", optional = true }
gag = { version = "0.1.9", optional = true }

[features]
termion_frontend = [ "termion", "gag" ]
imgui_frontend = [ "imgui" ]

